# GrpcJniClient

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/kotlinx/grpcjniclient/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: configure.properties
app/src/main/cpp/: CMakeLists.txt  CarplayNativeLogger.h  GreeterClient.h  native-lib.cpp  object_generated.h
app/src/main/cpp/base/: CarplayNativeLogger.h  JniClassLoaderHelper.h
app/src/main/cpp/carplay/rpc/: CarplayBtRfcommClient.cpp  CarplayRpcClient.cpp  JniClassLoaderHelper.cpp
app/src/main/cpp/carplay/rpc/include/: CarplayBtRfcommClient.h  CarplayRpcClient.h  rfcomm.protoc.grpc.pb.h  rfcomm.protoc.pb.h
app/src/main/cpp/carplay/rpc/protoc/: rfcomm.protoc.grpc.pb.cc  rfcomm.protoc.pb.cc
app/src/main/cpp/grpc/include/google/protobuf/: empty.pb.h
app/src/main/cpp/rpc/include/: IHandler.hpp  IHandlerImpl.hpp  NngUdsRpcClient.hpp  NngUdsRpcDefine.hpp  NngUdsRpcPeerDial.hpp  NngUdsRpcPeerListener.hpp  NngUdsRpcPullListener.hpp  NngUdsRpcPushDial.hpp  NngUdsRpcServer.hpp  ZSocketIpcWorker.hpp  ZUdsRpcServer.hpp  request_param_generated.h  response_param_generated.h  rpc_generated.h  rpc_response_utils.hpp
app/src/main/cpp/rpc/source/: CarplayBtRpcCall.cpp  CarplayBtRpcReceive.cpp  CarplayRpcClient.cpp  CarplayRpcRuntime.cpp  JniClassLoaderHelper.cpp  OesRenderer.cpp
app/src/main/cpp/rpc/source/decode/include/: CarplayScreenDecode.hpp
app/src/main/cpp/rpc/source/include/: CarplayRpcRuntime.h  CarplayVedioFrame.h  OesRenderer.h  bluetooth_generated.h  carplay_generated.h  wifi_generated.h
app/src/main/cpp/rpc/source/net/: NetLinkMonitor.cpp  NetLinkMonitor.h
app/src/main/cpp/rpc/source/rpc/include/: RpcCaller.cpp  RpcHandlder.cpp
app/src/main/java/com/kotlinx/grpcjniclient/: CarplayApplication.kt  CarplayEventHandlder.kt  CarplayService.kt  MainActivity.kt
app/src/main/java/com/kotlinx/grpcjniclient/bt/: BluetoothConsts.kt  BluetoothDeviceObserver.kt  BluetoothExt.kt  BluetoothRfcommChannel.kt  BluetoothRfcommManager.kt  BluetoothService.kt  CarplayBluetoothService.kt
app/src/main/java/com/kotlinx/grpcjniclient/bt/event/: BluetoothEvent.kt
app/src/main/java/com/kotlinx/grpcjniclient/bt/module/: BluetoothRfcomm.kt  BtRfcommChannelState.kt
app/src/main/java/com/kotlinx/grpcjniclient/bt/profile/: BluetoothProfileManager.kt
app/src/main/java/com/kotlinx/grpcjniclient/bt/transport/: BluetoothRfcommChannel.kt  BluetoothRfcommChannelItem.kt  BluetoothRfcommManager.kt  BluetoothRfcommTransform.kt
app/src/main/java/com/kotlinx/grpcjniclient/core/: CarplayPropertiesLoader.kt  CarplayRuntime.kt  CarplayStateMachine.kt  ServiceBinderManager.kt
app/src/main/java/com/kotlinx/grpcjniclient/net/: HostapdManager.kt  HostapdService.kt  NetService.kt
app/src/main/java/com/kotlinx/grpcjniclient/net/event/: HostapdEvent.kt
app/src/main/java/com/kotlinx/grpcjniclient/net/module/: HostapdSecurityType.kt  HostapdState.kt  HostpadInfo.kt
app/src/main/java/com/kotlinx/grpcjniclient/rpc/: AidlRpc.kt  BluetoothRpc.kt  CarplayRpcManager.kt  JniClassLoader.kt  RpcEvent.kt
app/src/main/java/com/kotlinx/grpcjniclient/screen/: CarplayScreenStub.kt
app/src/main/java/com/kotlinx/grpcjniclient/ui/: CarplayMainActivity.kt  UiService.kt  UiServiceLocalProxy.kt
app/src/main/java/com/kotlinx/grpcjniclient/ui/event/: UiEvent.kt
app/src/main/java/com/kotlinx/grpcjniclient/wifi/: HostapdManager.kt  HostapdService.kt
app/src/main/java/com/kotlinx/grpcjniclient/wifi/module/: HostapdSecurityType.kt  HostapdState.kt  HostpadInfo.kt
app/src/main/res/layout/: activity_carplay_main.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kotlinx/grpcjniclient/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
